# zk-healthcare-agents-solana

./: .gitignore  CHANGELOG.md (at root)  CONTRIBUTING.md (at root)  LICENSE (Apache 2.0)  Makefile (at root)  README.md
.github/workflows/: ci.yml
agents/: init.py  main.py  requirements.txt
agents/config/: drugs.json
circuits/: compile.sh  eligibility.circom
notebooks/: analysis.ipynb
programs/zk_healthcare/: Cargo.toml
programs/zk_healthcare/programs/zk_healthcare/: Anchor.toml
programs/zk_healthcare/src/: lib.rs
tests/: test_agents.py
